[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "deeprank2"
version = "3.0.4"
description = "DeepRank2 is an open-source deep learning framework for data mining of protein-protein interfaces or single-residue missense variants."
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "graph neural network",
    "convolutional neural network",
    "protein-protein interfaces",
    "missense variants",
    "deep learning",
    "pytorch",
]
authors = [
    { name = "Giulia Crocioni", email = "g.crocioni@esciencecenter.nl" },
    { name = "Coos Baakman", email = "coos.baakman@radboudumc.nl" },
    { name = "Dani Bodor", email = "d.bodor@esciencecenter.nl" },
    { name = "Daniel Rademaker" },
    { name = "Gayatri Ramakrishnan" },
    { name = "Sven van der Burg" },
    { name = "Li Xue" },
    { name = "Daniil Lepikhov" },
]
license = { text = "Apache-2.0 license" }
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "notebook >= 7.0.6",
    "markov-clustering >= 0.0.6.dev0",
    "tensorboard>=0.9.0",
    "protobuf >= 3.20.1",
    "dill >= 0.3.8",
    "pyarrow >= 15.0.0",
    "tables >= 3.8.0",
    "numpy >= 1.25, < 2.0",
    "scipy >= 1.13.1",
    "h5py >= 3.6.0",
    "networkx >= 2.6.3",
    "matplotlib >= 3.5.1",
    "scikit-learn >= 1.0.2",
    "chart-studio >= 1.1.0",
    "pdb2sql >= 0.5.1",
    "python-louvain >= 0.16",
    "tqdm >= 4.63.0",
    "freesasa >= 2.1.0",
    "biopython >= 1.81"
    ]

[project.optional-dependencies]
# development dependency groups
test = [
    "pytest >= 7.4.0",
    "bump2version",
    "coverage",
    "pycodestyle",
    "pytest-cov",
    "pytest-runner",
    "coveralls",
    "ruff>=0.3.0"
]
publishing = ["build", "twine", "wheel"]
notebooks = ["nbmake"]

[project.urls]
Documentation = "https://deeprank2.readthedocs.io/en/latest/?badge=latest"
Repository = "https://github.com/DeepRank/deeprank2"
Changelog = "https://github.com/DeepRank/deeprank2/blob/main/CHANGELOG.md"

[tool.coverage.run]
branch = true
source = ["deeprank2"]

[tool.setuptools.packages.find]
include = ["deeprank2*"]

[tool.setuptools.package-data]
"*" = ["*.xlsx", "*.param", "*.top", "*residue-classes"]

[tool.pytest.ini_options]
# pytest options: -ra: show summary info for all test outcomes
addopts = "-ra"  

[tool.ruff]
line-length = 159

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Unrealistic for this code base
    "PTH",     # flake8-use-pathlib    
    "N",       # naming conventions
    "PLR0912", # Too many branches,
    "PLR0913", # Too many arguments in function definition
    "D102",    # Missing docstring in public method
    # Unwanted
    "FBT",    # Using boolean arguments
    "ANN101", # Missing type annotation for `self` in method
    "ANN102", # Missing type annotation for `cls` in classmethod
    "ANN204", # Missing return type annotation for special (dunder) method
    "B028",   # No explicit `stacklevel` keyword argument found in warning
    "S105",   # Possible hardcoded password
    "S311",   # insecure random generators
    "PT011",  # pytest-raises-too-broad
    "SIM108", # Use ternary operator
    # Unwanted docstrings
    "D100", # Missing module docstring
    "D104", # Missing public package docstring
    "D105", # Missing docstring in magic method
    "D107", # Missing docstring in `__init__`
    # Docstring rules irrelevant to the Google style
    "D203", # 1 blank line required before class docstring
    "D204", # 1 blank line required after class docstring
    "D212", # Multi-line docstring summary should start at the first line
    "D213", # Multi-line docstring summary should start at the second line
    "D215", # Section underline is over-indented 
    "D400", # First line should end with a period (clashes with D415:First line should end with a period, question mark, or exclamation point) 
    "D401", # First line of docstring should be in imperative mood
    "D404", # First word of the docstring should not be This
    "D406", # Section name should end with a newline
    "D407", # Missing dashed underline after section 
    "D408", # Section underline should be in the line following the section's name
    "D409", # Section underline should match the length of its name
    "D413", # Missing blank line after last section 
]

# Autofix settings
fixable = ["ALL"]
unfixable = ["F401"] # unused imports (should not disappear while editing)
extend-safe-fixes = [
    "D415",   # First line should end with a period, question mark, or exclamation point
    "D300",   # Use triple double quotes `"""`
    "D200",   # One-line docstring should fit on one line
    "TCH",    # Format type checking only imports
    "ISC001", # Implicitly concatenated strings on a single line
    "EM",     # Exception message variables
    "RUF013", # Implicit Optional
    "B006",   # Mutable default argument
]

isort.known-first-party = ["deeprank2"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",    # Use of `assert` detected
    "PLR2004", # Magic value used in comparison
    "D101",    # Missing class docstring
    "D102",    # Missing docstring in public method
    "D103",    # Missing docstring in public function
    "SLF001",  # private member access
]
"docs/*" = ["ALL"]
"tests/perf/*" = ["T201"] # Use of print statements
