[metadata]
name = deeprankcore
authors = [
    { name = "Giulia Crocioni", email = "g.crocioni@esciencecenter.nl" },
    { name = "Coos Baakman", email = "coos.baakman@radboudumc.nl"},
    { name = "Daniel Rademaker"},
    { name = "Gayatri Ramakrishnan"},
    { name = "Sven van der Burg"},
    { name = "Li Xue"},
    { name = "Daniil Lepikhov"},
    ]

classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description = deeprank-core allows to train graph neural networks to classify protein-protein interface with a greater flexibility for the user.
keywords =
    graph neural network
    protein-protein interface
    pytorch
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = https://github.com/DeepRank/deeprank-core/issues
url = https://github.com/DeepRank/deeprank-core
version = 1.0.0

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
python_requires = >= 3.9
install_requires =
    tables >= 3.7
    numpy >= 1.21.5
    scipy >= 1.8.0
    h5py >= 3.6.0
    h5xplorer
    networkx >= 2.6.3
    matplotlib >= 3.5.1
    pdb2sql >= 0.5.1
    scikit-learn >= 1.0.2
    chart-studio >= 1.1.0
    biopython >= 1.79
    python-louvain >= 0.16
    markov-clustering >= 0.0.6.dev0
    tqdm >= 4.63.0
    freesasa >= 2.1.0
    tensorboard >= 2.9.0
    protobuf <= 3.20.1
    torch-scatter >= 2.0.6
    torch-sparse >= 0.6.13
    torch-cluster >= 1.6.0
    torch-spline-conv >= 1.2.1
    torch-geometric >= 2.0.4

[options.extras_require]
dev =
    yapf
    isort
doc =
    recommonmark
    sphinx
    sphinx_rtd_theme
test =
    prospector[with_pyroma]
    bump2version
    coverage
    pycodestyle
    pytest
    pytest-cov
    pytest-runner
    coveralls
publishing =
    build
    twine
    wheel

[options.packages.find]
include = deeprankcore, deeprankcore.*
exclude = tests, tests.*

[coverage:run]
branch = True
source = deeprankcore